@@ -1,4 +1,4 @@
-@c Copyright 2001, 2002, 2003, 2005, 2006, 2007, 2008, 2009, 2010
+@c Copyright 2001, 2002, 2003, 2005, 2006, 2007, 2008, 2009, 2010, 2011
 @c Free Software Foundation, Inc.
 @c This is part of the GAS manual.
 @c For copying conditions, see the file as.texinfo.
@@ -34,6 +34,15 @@ reference manual.
 The following table lists all available PowerPC options.
 
 @table @code
+@item -a32
+Generate ELF32 or XCOFF32.
+
+@item -a64
+Generate ELF64 or XCOFF64.
+
+@item -K PIC
+Set EF_PPC_RELOCATABLE_LIB in ELF flags.
+
 @item -mpwrx | -mpwr2
 Generate code for POWER/2 (RIOS2).
 
@@ -52,6 +61,9 @@ Generate code for PowerPC 403/405.
 @item -m440
 Generate code for PowerPC 440.  BookE and some 405 instructions.
 
+@item -m464
+Generate code for PowerPC 464.
+
 @item -m476
 Generate code for PowerPC 476.
 
@@ -66,6 +78,12 @@ Generate code for PowerPC 620/625/630.
 
 @item -me500, -me500x2
 Generate code for Motorola e500 core complex.
+
+@item -me500mc
+Generate code for Freescale e500mc core complex.
+
+@item -me500mc64
+Generate code for Freescale e500mc64 core complex.
 
 @item -mspe
 Generate code for Motorola SPE instructions.
@@ -91,16 +109,16 @@ Generate code for processors with AltiVec instructions.
 @item -mvsx
 Generate code for processors with Vector-Scalar (VSX) instructions.
 
-@item -mpower4
+@item -mpower4, -mpwr4
 Generate code for Power4 architecture.
 
-@item -mpower5
+@item -mpower5, -mpwr5, -mpwr5x
 Generate code for Power5 architecture.
 
-@item -mpower6
+@item -mpower6, -mpwr6
 Generate code for Power6 architecture.
 
-@item -mpower7
+@item -mpower7, -mpwr7
 Generate code for Power7 architecture.
 
 @item -mcell
@@ -127,10 +145,10 @@ Support for GCC's -mrelocatable-lib option.
 @item -memb
 Set PPC_EMB bit in ELF flags.
 
-@item -mlittle, -mlittle-endian
+@item -mlittle, -mlittle-endian, -le
 Generate code for a little endian machine.
 
-@item -mbig, -mbig-endian
+@item -mbig, -mbig-endian, -be
 Generate code for a big endian machine.
 
 @item -msolaris
@@ -138,6 +156,10 @@ Generate code for Solaris.
 
 @item -mno-solaris
 Do not generate code for Solaris.
+
+@item -nops=@var{count}
+If an alignment directive inserts more than @var{count} nops, put a
+branch at the beginning to skip execution of the nops.
 @end table
 
 
